// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Cart Route > Should render multiple products correctly 1`] = `
<div
  class="_cart_c7a017"
  data-testid="cartContainer"
>
  <ul
    class="_cartItems_c7a017"
  >
    <li
      class="_item_c7a017"
    >
      <img
        alt="foo"
        class="_image_c7a017"
      />
      <h3
        class="_title_c7a017"
      >
        foo
      </h3>
      <div
        class="_quantity_c7a017"
      >
        <button>
          -
        </button>
        <input
          min="1"
          type="number"
          value=""
        />
        <button>
          +
        </button>
      </div>
      <p>
        $undefined
      </p>
      <button>
        Remove
      </button>
    </li>
    <li
      class="_item_c7a017"
    >
      <img
        alt="bar"
        class="_image_c7a017"
      />
      <h3
        class="_title_c7a017"
      >
        bar
      </h3>
      <div
        class="_quantity_c7a017"
      >
        <button>
          -
        </button>
        <input
          min="1"
          type="number"
          value=""
        />
        <button>
          +
        </button>
      </div>
      <p>
        $undefined
      </p>
      <button>
        Remove
      </button>
    </li>
    <li
      class="_item_c7a017"
    >
      <img
        alt="foobar"
        class="_image_c7a017"
      />
      <h3
        class="_title_c7a017"
      >
        foobar
      </h3>
      <div
        class="_quantity_c7a017"
      >
        <button>
          -
        </button>
        <input
          min="1"
          type="number"
          value=""
        />
        <button>
          +
        </button>
      </div>
      <p>
        $undefined
      </p>
      <button>
        Remove
      </button>
    </li>
  </ul>
  <div
    class="_orderSummary_c7a017"
  >
    <h2>
      Order Summary
    </h2>
    <div
      class="_row_c7a017"
    >
      <p>
        3 items
      </p>
      <p>
        $undefined
      </p>
    </div>
    <div
      class="_row_c7a017"
    >
      <p>
        Standard Shipping
      </p>
      <p>
        $undefined
      </p>
    </div>
    <div
      class="_row_c7a017"
    >
      <p>
        Subtotal
      </p>
      <p>
        $undefined
      </p>
    </div>
    <button
      class="_checkout_c7a017"
    >
      Checkout
    </button>
  </div>
</div>
`;

exports[`Cart Route > Should render one product correctly 1`] = `
<div
  class="_cart_c7a017"
  data-testid="cartContainer"
>
  <ul
    class="_cartItems_c7a017"
  >
    <li
      class="_item_c7a017"
    >
      <img
        alt="foo"
        class="_image_c7a017"
      />
      <h3
        class="_title_c7a017"
      >
        foo
      </h3>
      <div
        class="_quantity_c7a017"
      >
        <button>
          -
        </button>
        <input
          min="1"
          type="number"
          value=""
        />
        <button>
          +
        </button>
      </div>
      <p>
        $undefined
      </p>
      <button>
        Remove
      </button>
    </li>
  </ul>
  <div
    class="_orderSummary_c7a017"
  >
    <h2>
      Order Summary
    </h2>
    <div
      class="_row_c7a017"
    >
      <p>
        1 items
      </p>
      <p>
        $undefined
      </p>
    </div>
    <div
      class="_row_c7a017"
    >
      <p>
        Standard Shipping
      </p>
      <p>
        $undefined
      </p>
    </div>
    <div
      class="_row_c7a017"
    >
      <p>
        Subtotal
      </p>
      <p>
        $undefined
      </p>
    </div>
    <button
      class="_checkout_c7a017"
    >
      Checkout
    </button>
  </div>
</div>
`;
